--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,85 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #ededed !important;
+  padding: 40px 60px;
+  font-family: 'Roboto', Arial, sans-serif;
+  font-weight: 500;
+}
+
+
+#title {
+  background-color: white;
+  border-radius: 10px;
+  height: 100px;
+  display: flex;
+  padding: 20px;
+  align-items: center;
+  font-size: 45px;
+  font-family: 'Roboto', Arial, sans-serif;
+  font-weight: 800; /* Gras */
+}
+
+#logo {
+  width: 230px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+#filter{
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+#ligne2{
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: 47% 50%;
+  gap: 3%;
+  font-size: 20px
+}
+
+#charts{
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: 65% 30%;
+  gap: 5%;
+  background-color: white;
+  border-radius: 10px;
+  padding: 40px;
+}
+
+#rond, #barre{
+  background-color: #ededed;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+#choose{
+  width: 300px;
+  background-color: #ededed;
+  border-radius: 4px;
+  padding: 4px;
+}
+
+#prix{
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  font-size: 20px;
+}
+
+#moyenne{
+  background-color: #3da478;
+  color: white;
+  padding: 2px 10px;
+  border-radius: 10px;
 }
